--- a/resources/Chatik/client.fxml
+++ b/resources/Chatik/client.fxml
@@ -13,7 +13,7 @@
       <Text layoutX="14.0" layoutY="93.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Port" textAlignment="CENTER" wrappingWidth="61.990234375" />
       <TextField fx:id="txtip" layoutX="404.0" layoutY="34.0" />
       <TextField layoutX="404.0" layoutY="76.0" />
-      <Label fx:id="lblreceive" layoutX="14.0" layoutY="177.0" prefHeight="101.0" prefWidth="571.0" />
       <Button fx:id="btnconn" layoutX="19.0" layoutY="127.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="162.0" text="Подключиться к серверу" />
+      <TextArea fx:id="txtreceive" editable="false" layoutX="1.0" layoutY="169.0" prefHeight="119.0" prefWidth="594.0" />
    </children>
 </Pane>
